# qry

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rustPrettyPrint.py
.github/workflows/: ci.yml
.zed/: debug.json
src/: app.rs  db.rs  event.rs  main.rs  ui.rs
