[package]
name = "qry"
version = "0.1.0"
edition = "2021"
description = "A TUI for exploring SQLite and DuckDB databases"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
duckdb = { version = "1.1", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2.2"
dirs = "6"

[profile.release]
lto = true
opt-level = 3